# public/swagger.json
@@ -29,11 +29,19 @@
 					"age": {
 						"type": "number",
 						"format": "double"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
 					}
 				},
 				"required": [
 					"username",
-					"age"
+					"age",
+					"email",
+					"password"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -88,13 +96,8 @@
 			"post": {
 				"operationId": "CreateUser",
 				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
+					"204": {
+						"description": "No content"
 					}
 				},
 				"security": [],
